@@ -305,6 +305,8 @@ x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low
     - help.cpp: typo fix for --git-info.
     - help.{cpp,h}: provide string splitting logic as separate
       split_long_line() function. Use this in pretty_print().
+    - help.cpp: simplify pretty_print() and make it also split lines for
+      non-terminal output or when the terminal width is unknown.
 
   [ Fernando Pedemonte ]
   * New upstream release (4.0.4.0):
